Bug 92055 - Crash after docking the media playback toolbar
Summary: Crash after docking the media playback toolbar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-14 00:19 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (28.51 KB, text/plain)
2015-06-14 00:19 UTC, Yousuf Philips (jay) (retired)
Details
backtrace (35.69 KB, text/plain)
2015-06-16 10:43 UTC, Yousuf Philips (jay) (retired)
Details
backtrace (14.65 KB, text/plain)
2015-06-30 14:20 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-06-14 00:19:10 UTC
Created attachment 116509 [details]
backtrace

Now that the crash of the media playback toolbar appearing has been fixed in bug 90077, it seems docking the floating toolbar crashes it as well.

Steps:
1) Open Impress
2) Add a audio or video clip
3) Click on the clip and the media playback toolbar appears
4) Undock it from the bottom
5) Dock it back
6) Crash

Version: 5.1.0.0.alpha1+
Build ID: 3754474cdea72ebe7f09457ef82a5c3131d06b78
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-06-13_07:55:37
Comment 1 Buovjaga 2015-06-14 13:00:59 UTC
Linux-only.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 01a189abcd9a4ca472a74b3b2c000c9338fc2c91
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-14_07:46:28
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: a9286c302e96258f32d13fb66aced25750e82cd3
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-13_00:35:08
Locale: en-US (en_US.UTF-8)
Comment 2 Caolán McNamara 2015-06-15 19:55:53 UTC
I wonder if this is a duplicate of #91960 and is now fixed ?
Comment 3 Yousuf Philips (jay) (retired) 2015-06-16 07:52:49 UTC
Unfortunately there arent any new daily builds to test against. :(
Comment 4 Yousuf Philips (jay) (retired) 2015-06-16 10:43:39 UTC
Created attachment 116577 [details]
backtrace

Still crashed after docking and undocking it a few times.

Version: 5.1.0.0.alpha1+
Build ID: 9ef671364ff9fbb552a5433053af9283d12d90c7
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-06-16_08:47:30
Comment 5 Yousuf Philips (jay) (retired) 2015-06-30 14:20:26 UTC
Created attachment 116952 [details]
backtrace

Still crashing but this time i used the Slide View toolbar by docking and undocking it a few times.

Version: 5.1.0.0.alpha1+
Build ID: 571f0abb95e1d4aa1cb7cad20b783b17ba7ac99d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-29_23:57:05
Comment 6 Michael Meeks 2015-07-09 13:08:25 UTC
What desktop environment are you using ? the hash you mention is after Noel's fix went in - so not a dup of tdf#91960 - I tried pretty hard here, and couldn't reproduce it with gtk2 for master: 5d19f90eb247275420a6774403cb77940ac6131b - there hasn't been any relevant commits since your hash (that jump out at me) Jay.

Can you re-test and confirm with a newer build ? I'll push a prophylactic fix to allow ImplBorderWindow to behave more safely when invoked post dispose but ... unclear what's up there. It'd be great to have a trace with symbols too if possible [!].

Thanks !
Comment 7 Michael Meeks 2015-07-09 13:13:41 UTC
https://gerrit.libreoffice.org/#/c/16892/ - but it's a blind workaround.
Comment 8 Yousuf Philips (jay) (retired) 2015-07-09 14:33:00 UTC
I'm running XFCE on Linux Mint 17.1.
Comment 9 Commit Notification 2015-07-09 15:50:24 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=588f07068dc572ea0abd55678fd00f79ff34ddce

tdf#92055 - make ImplBorderWindow more tolerant of post-dispose events.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Meeks 2015-07-09 15:53:32 UTC
I'm using XFCE on openSUSE 13.1 and no problems ;-) I think I'd need a backtrace here of a build with some symbols; do our dbgutil packages have those ? without that it's hard to make progress; thanks !
Comment 11 Commit Notification 2015-07-09 16:24:43 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c63fbe170276d65aa97a29ba2f53fce63272b428&h=libreoffice-5-0

tdf#92055 - make ImplBorderWindow more tolerant of post-dispose events.

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Buovjaga 2015-07-14 11:11:19 UTC
No crash when docking & undocking media playback and slide view toolbars several times.

Note that I was able to crash it last month (comment 1).

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: 8de7d44f96252e97e224d42466698114370dbaa3
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-13_21:43:47
Locale: fi-FI (fi_FI)
Comment 13 Buovjaga 2015-07-14 11:11:43 UTC
Pasted wrong OS info. Correct:

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: 0bd582834b46dbbc5037310d45bac8885e6f2a07
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-07-14_01:14:35
Locale: en-US (en_US.UTF-8)
Comment 14 Yousuf Philips (jay) (retired) 2015-07-30 21:17:48 UTC
Confirming that it no longer crashes.

Version: 5.1.0.0.alpha1+
Build ID: 902255645328efde34ddf62227c8278e8dd61ff0
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-07-30_05:23:12
Locale: en-US (en_US.UTF-8)