tdf#92055 - make ImplBorderWindow more tolerant of post-dispose events.

Change-Id: I9556c920e6fc8b5595eee6bd00d36669e1684e25
Reviewed-on: https://gerrit.libreoffice.org/16892
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>